Adds avatar service with caching

--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/card/card.component.html
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/card/card.component.html
@@ -8,9 +8,8 @@
             <div class="inner-border">
                 <img
                     [src]="
-                        'https://avatar.iran.liara.run/username?username=' +
+                        '/api/avatar/' +
                         employee.data.firstName +
-                        '+' +
                         employee.data.lastName
                     "
                     alt="Random avatar"
