--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/editor/editor.component.html
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/editor/editor.component.html
@@ -81,10 +81,7 @@
                         <div class="other-details">
                             <div class="avatar">
                                 <img
-                                    [src]="
-                                        'https://avatar.iran.liara.run/public?username=' +
-                                        nonReactiveName
-                                    "
+                                    [src]="'/api/avatar/' + nonReactiveName"
                                     alt="Employee avatar"
                                 />
                             </div>
