--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/navigation/navigation.component.scss
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/navigation/navigation.component.scss
@@ -35,6 +35,8 @@
                 border-radius: 50px;
                 height: 50px;
                 width: 50px;
+                overflow: hidden;
+
                 img {
                     max-height: 100%;
                     max-width: 100%;
