--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/header/header.component.html
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/header/header.component.html
@@ -29,7 +29,9 @@
             </svg>
         </a>
         <div class="item">
-            <app-navigation></app-navigation>
+            <app-navigation
+                (adminPanelClicked)="forwardAdminClick()"
+            ></app-navigation>
         </div>
     </div>
 
