--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/login/login.component.scss
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "bs-breakpoints";
+
 .container {
     display: grid;
     place-content: center;
@@ -12,9 +14,13 @@
         flex-direction: column;
         gap: 10px;
         padding: 20px;
-        width: 500px;
+        width: 90vw;
         background-color: var(--colour-white);
         color: var(--colour-black);
+
+        @include media-breakpoint-up(md) {
+            width: 500px;
+        }
 
         .title-wrap {
             display: flex;
