--- a/UKParliament.CodeTest.Web/ClientApp/src/app/components/navigation/navigation.component.html
+++ b/UKParliament.CodeTest.Web/ClientApp/src/app/components/navigation/navigation.component.html
@@ -18,7 +18,7 @@
         </button>
         @if (isOpen) {
             <div class="dropdown-contents">
-                <button class="dropdown-button" (click)="sendAlert()">
+                <button class="dropdown-button" (click)="openAdminPanel()">
                     Admin panel
                 </button>
 
